# IBS_for_Xsuite

./: .gitignore  CLIC_DRs_IBS_allmodels.py  Makefile  README.md  TODO.md  Xsuite_IBS.py  Xsuite_IBS_allmodels.py  chrom-corr_DR.newlattice_2GHz.seq  lib  pyproject.toml  untouched_clic_dr_script.py
.github/workflows/: documentation.yml  tests.yml
docs/: conf.py  index.rst  quickstart.rst  references.bib
docs/modules/: index.rst
examples/: CLIC_DRs_IBS_allmodels.py  Xsuite_IBS.py  untouched_clic_dr_script.py
examples/lib/: IBSfunctions.py  Kineticfunctions.py  general_functions.py  loadlattice.py  longitudinal_tracking.py  simulation_parameters.py  twiss_for_IBS.tfs
examples/outputs/: new_script_new_xsuite_simple.npz  old_script_old_xsuite_kinetic.parquet
examples/plotting/: comparison.ipynb  plot_new_parquet.py  plot_npz.py  plot_old_parquet.py
ibs/: __init__.py  version.py
lib/: IBSfunctions.py  Kineticfunctions.py  general_functions.py  loadlattice.py  longitudinal_tracking.py  simulation_parameters.py
output/: xsuite_kinetic.txt  xsuite_simple.txt
outputs/: old_script_new_xsuite_simple.parquet  old_script_old_xsuite_analytical.parquet  plot.py  plot_npz.py  plot_parquet.py  untouched_xsuite_analytical.parquet  untouched_xsuite_kinetic.parquet  xsuite_analytical.npz  xsuite_kinetic.npz  xsuite_simple.parquet
plotting/: compare.ipynb  comparison.ipynb  plot_npz.py  plot_old_parquet.py  plot_parquet.py  plotters.py
pyibs/: __init__.py  version.py
scripts/: CLIC_DRs_IBS_allmodels.py  Xsuite_IBS.py
tests/: conftest.py  helpers.py  test_fixtures.py
xibs/: __init__.py  _old_michail.py  evolutions.py  kinetic.py  nagaitsev.py  simple.py  version.py
