[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IBS_for_xsuite"
description = "Package to calculate IBS growth rates"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Michalis Zampetakis", email = "michalis.zampetakis@cern.ch" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
]

[tool.setuptools]
py-modules = ['lib']




